# energy-forecasting

./: .env.default  .gitignore  README_TODO.md  gcp_adc_sample.py  requirements.txt  setup.md  wandb_test.py
.github/workflows/: ci_cd_ml_pipeline.yml  ci_cd_web_app.yml  push_image_to_gcp.sh
.github/workflows/feature-pipeline/: Dockerfile
airflow/: Dockerfile
airflow/dags/: ml_pipeline_dag.py
app-api/api/: views.py
app-frontend/frontend/: main.py  settings.py
app-monitoring/: Dockerfile  pyproject.toml
app-monitoring/monitoring/: main.py  settings.py
batch-prediction-pipeline/: pyproject.toml
batch-prediction-pipeline/batch_prediction_pipeline/: utils.py
deploy/: install_docker.sh  ml-pipeline.sh
feature-pipeline/: Dockerfile  main.py  pyproject.toml  requirements.txt
feature-pipeline/feature_pipeline/: feature_view.py  main.py  pipeline.py  settings.py
feature-pipeline/feature_pipeline/etl/: extract.py
training-pipeline/: README.md  pyproject.toml  t.py
training-pipeline/training_pipeline/: hyperparameter_tuning.py  transformers.py
