[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Iusztin Paul <p.e.iusztin@gmail.com>", "Kurtis Pykes <kurtispykes@gmail.com>"]
readme = "README.md"
packages = [{include = "feature_pipeline"}]

# confluent-kafka fix: https://stackoverflow.com/questions/75704644/unable-to-install-confluent-kafka-python-module-on-alpine-3-13-5
# twofish windows fix: install VSC C++ build tools

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hopsworks = "3.2.0"
fire = "^0.5.0"
yarl = "^1.8.2"
pandas = ">=1.3.5"
requests = "^2.28.2"
python-dotenv = ">=0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
